--- a/RecycleViewTest/RecycleViewTest/RecycleViewTest.Android/Resources/layout/MainView.axml
+++ b/RecycleViewTest/RecycleViewTest/RecycleViewTest.Android/Resources/layout/MainView.axml
@@ -6,8 +6,7 @@
     android:orientation="vertical">
     <MvvmCross.Droid.Support.V7.RecyclerView.MvxRecyclerView
         android:id="@+id/rvItems"
-        android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         local:MvxItemTemplate="@layout/itemview"
         local:MvxBind="ItemsSource TestItems" />
