--- a/RecycleViewTest/RecycleViewTest/RecycleViewTest.Android/Resources/layout/ItemView.axml
+++ b/RecycleViewTest/RecycleViewTest/RecycleViewTest.Android/Resources/layout/ItemView.axml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:local="http://scehmas.android.com/apk/res-auto"
+          xmlns:local="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="Name" />
+    android:text="Name"
+    local:MvxBind="Text Name" />
